platform-operator/poc/charts/thirdparty/manual-keycloak-install/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
spec:
  ingressClassName: verrazzano-nginx
  rules:
    - host: keycloak.default.172.18.0.230.nip.io
      http:
        paths:
          - backend:
              service:
                name: keycloak-http
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - keycloak.default.172.18.0.230.nip.io
      secretName: keycloak-tls
